--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -97,13 +97,12 @@
           <div class="section-text">
             <h3>A Change in Climate, A Change in Taste</h3>
             <div class="landing-subheading">
-              INTRODUCTION TO THE VISUALISATION - ABOUT CLIMATE CHANGE, AND HOW
-              IT CAN CHANGE FOOD
+              An exploration into Viticulture within the United Kingdom
             </div>
             <div id="body1" class="row">
               <!-- text left-->
               <div class="col s10">
-                <p>A data visualisation website by Group 5 CASA0003</p>
+                <p>A data visualisation website by Group 5 for CASA0003</p>
                 <br> <button id="btn" onclick="toggle()">Click to Go Fullscreen</button>
               </div>
             </div>
@@ -131,7 +130,7 @@
             status quo for Viticulture. Throughout this website, the
             untold story of the UK's viticulture is explored. From weather
             patterns, to what lies beneath the grapes, you can discover how a
-            global phenomenon is creating a new kind of locality.
+            global phenomenon is creating change locally.
           </p>
           <p class="paragraph-main">
             Historically, wine regions were located almost always between the
@@ -160,7 +159,8 @@
       <div class="fullpage-graphics">
         <iframe frameborder="0" class="map"
           src="../02-Global-Viticultural-Climate-Zones/02-Global-Viticultural-Climate-Zones.html"></iframe>
-        <p class="paragraph-describtion">Global Viticulture Climate Zones</p>
+        <p class="paragraph-describtion">Map visulisaing changes in climate from 1990 - 2017. Data from: Willmott, C and Matsuura, K. 2017. Terrestrial Air Temperature and Precipitation: Monthly and Annual Time Series (1950 - 1999). <em> NOAA Physical Sciences Laboratory. University of Delaware</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html">https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html</a> </p>
+
       </div>
     </section>
 
@@ -173,9 +173,7 @@
 
           <iframe frameborder="0" class="map" src="../03-UK-Climate-Change/03-UK-climate-temp-rainfall.html"></iframe>
 
-          <p class="paragraph-describtion">Data source: <a
-              href="https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series">Met Office
-              (2022)</a></p>
+          <p class="paragraph-describtion">Plots showing changes in UK climate from 1885 to 2021. Data from: Met Office. 2022.</b> Climate and Climate Change: UK and regional series. <em> Met Office</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series</a></p>
         </div>
 
         <div class="section-text">
@@ -195,20 +193,20 @@
       </div>
     </section>
 
-    <!-- FOURTH PAGE: Haofu Europe Map -->
+    <!-- FOURTH PAGE: Europe Map -->
 
     <section class="vertical-scrolling">
       <div class="section-container">
         <div class="section-graphics">
           <iframe class="map" src="../04-Europe-Vineyards/04-Europe-Vineyards.html"></iframe>
           <p class="paragraph-describtion">
-            Map of Vineyards land use in Europe (Copernicus Global Land Service, 2000)
+            Map of Vineyards based on land use satellite data. Data from: Copernicus. 2000. Corine Land Cover. <em> European Environment Agency </em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download">https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download</a>
           </p>
         </div>
         <div class="section-text">
           <h2>Europe: The Traditional Area of Viticulture</h2>
           <p class="paragraph-main">
-            In the year 2000, the traditional distribution of vineyard regions
+            In the year 2000, the  distribution of vineyard regions
             throughout Europe was concentrated within countries within the
             South. These vineyards form a part of the Old-World Wine. As
             shown, there were no vineyard regions within the UK. However, in
