--- a/02-Global-Viticultural-Climate-Zones/02-Global-Viticultural-Climate-Zones.html
+++ b/02-Global-Viticultural-Climate-Zones/02-Global-Viticultural-Climate-Zones.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
-
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            font-family: 'Raleway', sans-serif;
             font-size: 12px;
         }
 
@@ -101,7 +101,7 @@
 
         .mapboxgl-popup {
             max-width: 400px;
-            font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+            font: 12px/20px 'Raleway', sans-serif;
             background-color: white;
             opacity: 0.8;
         }
