--- a/06-UK-Vineyard-Locations/06-UK-Vineyard-Locations.html
+++ b/06-UK-Vineyard-Locations/06-UK-Vineyard-Locations.html
@@ -67,7 +67,7 @@
     }
 
     .colors {
-      background: linear-gradient(to right, #2dc4b2, #3bb3c3, #669ec4, #8b88b6);
+      background: linear-gradient(to right, #2dc4b2, #3bb3c3, #669ec4, #8b88b6, #a2719b);
       ;
       margin-bottom: 1%;
     }
