--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -415,13 +415,18 @@
         <div class="section-text">
           <h2>About</h2>
           <h3>Team</h3>
-          <p class="paragraph-main">
-            Andras Gelanyi<br />
-            Ruby Johnson<br />
-            Kamelya Staneva<br />
-            Haofu Wang<br />
-            Shuyi Zheng<br />
-          </p>
+          <table>
+            <tr>
+               <td ><center><img src="https://raw.githubusercontent.com/agelanyi/climate-and-uk-wine/main/website-frontend/media/Andras.jpg" width="300" height="300"> Andras Gelanyi </center></td>
+               <td ><center><img src="https://raw.githubusercontent.com/agelanyi/climate-and-uk-wine/main/website-frontend/media/Haofu.jpg" width="300" height="300" > Haofu Wang </center></td>
+               <td ><center><img src="https://raw.githubusercontent.com/agelanyi/climate-and-uk-wine/main/website-frontend/media/Kameliya.jpeg" width="300" height="300" > Kameliya Staneva </center></td>
+            </tr>
+        
+            <tr>
+               <td ><center><img src="https://raw.githubusercontent.com/agelanyi/climate-and-uk-wine/main/website-frontend/media/Ruby.jpeg" width="300" height="300" > Ruby Johnson </center></td>
+               <td ><center><img src="https://raw.githubusercontent.com/agelanyi/climate-and-uk-wine/main/website-frontend/media/Shuyi.jpg" width="300" height="300" > Shuyi Zheng </center></td>
+            </tr>
+        </table>
         </div>
       </div>
     </section>
