--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -412,22 +412,26 @@
 
     <section class="vertical-scrolling">
       <div class="section-container">
-        <div class="section-text">
-          <h2>About</h2>
-          <h3>Team</h3>
-          <table>
+        <div class="fullpage-section-text">
+          <h2>Team</h2>
+
+            
+            <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Andras.jpg" style="width:100%"><figcaption>Andras Gelanyi</figcaption></figure>
+            <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Haofu.jpg" style="width:100%"><figcaption>Haofu Wang</figcaption></figure>
+            <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Kameliya.jpg" style="width:100%"><figcaption>Kameliya Staneva</figcaption></figure>
+            <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Ruby.jpg" style="width:100%"><figcaption>Ruby Johnson</figcaption></figure>
+            <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Shuyi.jpg" style="width:100%"><figcaption>Shuyi Zheng</figcaption></figure>
+<!--       <table style="margin-left: auto;  margin-right: auto;">
             <tr>
-               <td ><center><img src="https://raw.githubusercontent.com/agelanyi/climate-and-uk-wine/main/website-frontend/media/Andras.jpg" width="300" height="300"> Andras Gelanyi </center></td>
-               <td ><center><img src="https://raw.githubusercontent.com/agelanyi/climate-and-uk-wine/main/website-frontend/media/Haofu.jpg" width="300" height="300" > Haofu Wang </center></td>
-               <td ><center><img src="https://raw.githubusercontent.com/agelanyi/climate-and-uk-wine/main/website-frontend/media/Kameliya.jpeg" width="300" height="300" > Kameliya Staneva </center></td>
+               <td><img src="media/Andras.jpg" width="200" height="200"> Andras Gelanyi </td>
+               <td><img src="media/Haofu.jpg" width="200" height="200" > Haofu Wang </td>
+               <td><img src="media/Kameliya.jpeg" width="200" height="200" > Kameliya Staneva </td>
+               <td><img src="media/Ruby.jpeg" width="200" height="200" > Ruby Johnson</td>
+               <td><img src="media/Shuyi.jpg" width="200" height="200" > Shuyi Zheng</td>
             </tr>
-        
-            <tr>
-               <td ><center><img src="https://raw.githubusercontent.com/agelanyi/climate-and-uk-wine/main/website-frontend/media/Ruby.jpeg" width="300" height="300" > Ruby Johnson </center></td>
-               <td ><center><img src="https://raw.githubusercontent.com/agelanyi/climate-and-uk-wine/main/website-frontend/media/Shuyi.jpg" width="300" height="300" > Shuyi Zheng </center></td>
-            </tr>
-        </table>
+        </table> -->
         </div>
+
       </div>
     </section>
 
