Scrollable containers in fullscreen.js

--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -159,7 +159,7 @@
       <div class="fullpage-graphics">
         <iframe frameborder="0" class="map"
           src="../02-Global-Viticultural-Climate-Zones/02-Global-Viticultural-Climate-Zones.html"></iframe>
-        <p class="paragraph-describtion">Map visulisaing changes in climate from 1990 - 2017. Data from: Willmott, C and Matsuura, K. 2017. Terrestrial Air Temperature and Precipitation: Monthly and Annual Time Series (1950 - 1999). <em> NOAA Physical Sciences Laboratory. University of Delaware</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html">https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html</a> </p>
+        <p class="paragraph-description">Map visulisaing changes in climate from 1990 - 2017. Data from: Willmott, C and Matsuura, K. 2017. Terrestrial Air Temperature and Precipitation: Monthly and Annual Time Series (1950 - 1999). <em> NOAA Physical Sciences Laboratory. University of Delaware</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html">https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html</a> </p>
 
       </div>
     </section>
@@ -173,7 +173,7 @@
 
           <iframe frameborder="0" class="map" src="../03-UK-Climate-Change/03-UK-climate-temp-rainfall.html"></iframe>
 
-          <p class="paragraph-describtion">Plots showing changes in UK climate from 1885 to 2021. Data from: Met Office. 2022.</b> Climate and Climate Change: UK and regional series. <em> Met Office</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series</a></p>
+          <p class="paragraph-description">Plots showing changes in UK climate from 1885 to 2021. Data from: Met Office. 2022.</b> Climate and Climate Change: UK and regional series. <em> Met Office</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series</a></p>
         </div>
 
         <div class="section-text">
@@ -199,7 +199,7 @@
       <div class="section-container">
         <div class="section-graphics">
           <iframe class="map" src="../04-Europe-Vineyards/04-Europe-Vineyards.html"></iframe>
-          <p class="paragraph-describtion">
+          <p class="paragraph-description">
             Map of Vineyards based on land use satellite data. Data from: Copernicus. 2000. Corine Land Cover. <em> European Environment Agency </em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download">https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download</a>
           </p>
         </div>
@@ -222,7 +222,7 @@
       <div class="section-container">
         <div class="section-graphics">
           <iframe frameborder="0" class="map" src="../05-UK-Vineyard-Graphs/05-UK-Vineyard-Graphs.html"></iframe>
-          <p class="paragraph-describtion">
+          <p class="paragraph-description">
             The Profile of Wine Exports (Data:
             https://www.statista.com/topics/8241/wine-in-the-united-kingdom/)
           </p>
@@ -247,7 +247,7 @@
     <section class="vertical-scrolling">
       <div class="fullpage-graphics">
         <iframe class="map" src="../06-UK-Vineyard-Locations/06-UK-Vineyard-Locations.html"></iframe>
-        <p class="paragraph-describtion">UK Vineyard Locations. Data: <a
+        <p class="paragraph-description">UK Vineyard Locations. Data: <a
             href="https://www.winegb.co.uk/trade/industry-data-and-stats-2/)">https://www.winegb.co.uk/trade/industry-data-and-stats-2/</a>
         </p>
       </div>
@@ -270,7 +270,7 @@
       <div class="section-container">
         <div class="section-graphics">
           <iframe class="map" src="../07-UK-Vineyard-Regions/07-UK-Vineyard-Regions.html"></iframe>
-          <p class="paragraph-describtion">Data from: <a href="https://www.winegb.co.uk/">WineGB UK (2022)</a></p>
+          <p class="paragraph-description">Data from: <a href="https://www.winegb.co.uk/">WineGB UK (2022)</a></p>
         </div>
         <div class="section-text">
           <h2>The Regions of UK Viticulture</h2>
@@ -292,13 +292,13 @@
           <iframe class="graphs-climate" src="../08-UK-Regions-Weather/Sun/index.html"></iframe>
           <iframe class="graphs-climate" src="../08-UK-Regions-Weather/Temp/index.html"></iframe>
 
-          <p class="paragraph-describtion">Data source: <a
+          <p class="paragraph-description">Data source: <a
               href="https://www.metoffice.gov.uk/research/climate/maps-and-data/summaries/index">Met Office (2022)</a>
           </p>
         </div>
         <div class="section-text">
           <h2>The Climate of the South East</h2>
-          <p class="paragraph-main">
+          <p class="paragraph-main-scroll">
             Each of these graphs compare annual precipitation, sunshine
             and temperature between the South East, and the entire UK. To
             create a successful vineyard, grapes need a warm environment, basked in sunshine.
@@ -327,14 +327,14 @@
       <div class="section-container">
         <div class="section-graphics">
           <iframe class="map" src="../09-UK-Vineyard-Case-Study/09-UK-Vineyard-Case-Study.html"></iframe>
-          <p class="paragraph-describtion">
+          <p class="paragraph-description">
             Case Study Map. Data from: British Geological Survey
           </p>
         </div>
         <div class="section-text">
           <h2>Rathfinny Wine Estate, Sussex</h2>
           <!-- <h3>Regional Case Study: Beneath the Vine</h3> -->
-          <p class="paragraph-main">
+          <p class="paragraph-main-scroll">
             Vineyards grow over 30 varieties
             across the UK. Each variety requires specific levels of soil
             moisture, PH and bedrock, which can greatly alter harvest and
@@ -364,14 +364,14 @@
       <div class="section-container">
         <div class="section-graphics">
           <iframe class="map" src="../10-US-Napa-Valley/10-US-Napa-Valley.html"></iframe>
-          <p class="paragraph-describtion">
+          <p class="paragraph-description">
             Map showing Napa Valley fire on 10/10/2017. Source: The University of Texas (2017)
           </p>
         </div>
         <div class="section-text">
           <h2>Napa valley</h2>
           <h3>Viticulture Beyond the UK</h3>
-          <p class="paragraph-main">
+          <p class="paragraph-main-scroll">
             Whilst climate change has produced a new opportunity for
             Viticulture in the UK, it would be negligible to exclude how other
             Viticulture's have been adversely impacted. Within Napa Valley, a
@@ -398,7 +398,7 @@
           <h2>Conclusion</h2>
           <h3>Final remarks</h3>
           <p class="paragraph-main">
-            Throughout this narrative, we have explored the UK’s burgeoning
+            Throughout this narrative, we have explored the UK's burgeoning
             Viticulture. From what is being produced, to how and why it is
             clear that the change in climate has driven this opportunity.
             However, with the point of no return, in which the potential to
