Page 02 text update

--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -146,8 +146,7 @@
             the calculated yearly mean temperatures of the growing seasons
             (April to October on the Northern, October to April on the
             Southern hemisphere) between 1900 and 2017. Customized aggregated
-            spatial datasets are based on information released by the NOAA
-            [2].
+            spatial datasets are based on information released by the NOAA.
           </p>
         </div>
       </div>
