Fixing the About / Team page

--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -414,21 +414,13 @@
         <div class="fullpage-section-text">
           <h2>Team</h2>
 
-            
+            <!-- AG: hardcoding the style into the figures. Ugly, but works for now. -->
             <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Andras.jpg" style="width:100%"><figcaption>Andras Gelanyi</figcaption></figure>
-            <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Haofu.jpg" style="width:100%"><figcaption>Haofu Wang</figcaption></figure>
-            <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Kameliya.jpg" style="width:100%"><figcaption>Kameliya Staneva</figcaption></figure>
             <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Ruby.jpg" style="width:100%"><figcaption>Ruby Johnson</figcaption></figure>
+            <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Kameliya.jpg" style="width:100%"><figcaption>Kameliya Staneva</figcaption></figure>
+            <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Haofu.jpg" style="width:100%"><figcaption>Haofu Wang</figcaption></figure>
             <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Shuyi.jpg" style="width:100%"><figcaption>Shuyi Zheng</figcaption></figure>
-<!--       <table style="margin-left: auto;  margin-right: auto;">
-            <tr>
-               <td><img src="media/Andras.jpg" width="200" height="200"> Andras Gelanyi </td>
-               <td><img src="media/Haofu.jpg" width="200" height="200" > Haofu Wang </td>
-               <td><img src="media/Kameliya.jpeg" width="200" height="200" > Kameliya Staneva </td>
-               <td><img src="media/Ruby.jpeg" width="200" height="200" > Ruby Johnson</td>
-               <td><img src="media/Shuyi.jpg" width="200" height="200" > Shuyi Zheng</td>
-            </tr>
-        </table> -->
+
         </div>
 
       </div>
