Adding line breaks to scrollable stories

--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -299,8 +299,8 @@
           <h2>The Climate of the South East</h2>
           <p class="paragraph-main-scroll">
             Each of these graphs compare annual precipitation, sunshine
-            and temperature between the South East, and the entire UK. To
-            create a successful vineyard, grapes need a warm environment, basked in sunshine.
+            and temperature between the South East, and the entire UK. <br><br>
+            To create a successful vineyard, grapes need a warm environment, basked in sunshine.
             When comparing the difference between annual average measurements in the three climate
             factors, a clear distinction is present, and increasing. The
             South-East region has a warmer environment, with more sunshine too. These differences have exacerbated
@@ -342,7 +342,8 @@
             too acidic or alkaline, yields will decrease and create unhealthy
             vines. The ideal range for soil moisture lies below 50%, as soil
             must be fertile and drain well. The bedrock beneath provides
-            minerals and physical support for vineyards. But how do these
+            minerals and physical support for vineyards. <br><br> 
+            But how do these
             requirements translate to a vineyard? The Rathfinny Wine
             Estate was established in 2010, the vineyard specialises in producing Pinot Noir,
             Chardonnay and Pinot Meunie, spanning 350 acres. Through
@@ -373,13 +374,13 @@
           <p class="paragraph-main-scroll">
             Whilst climate change has produced a new opportunity for
             Viticulture in the UK, it would be negligible to exclude how other
-            Viticulture's have been adversely impacted. Within Napa Valley, a
+            Viticulture's have been adversely impacted.<br><br> Within Napa Valley, a
             region in California, wildfires commonly occur. The specific event
             shown, upon the 10th of October 2017, displays both the smoke from
             the event, but, more importantly, the damage. With the
             Near-Infrared Image on the right, areas that display as black have
             been burned. Such events are increasing in frequency, alongside
-            other natural events. This is not an isolated incident, nor is it
+            other natural events.<br><br> This is not an isolated incident, nor is it
             temporally restricted. Globally, climate change is altering
             patterns of production and consumption. Whilst the expanding
             Viticulture within the UK may be considered a benefit, the
