--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -122,12 +122,12 @@
             Climate change is a prevalent topic throughout the world. Whilst
             we are all aware of the adversity that arises from such an issue,
             the change is simultaneously creating opportunities elsewhere.
-            Traditionally the UK has not been considered a hub of Viticulture.
+            Traditionally the UK has not been considered a hub of viticulture.
             However, with increasing temperatures and altering weather
             patterns, the UK is quickly becoming a novel producer of wines.
             From Pinot Noir to a new class of English sparkling wine,
             vineyards throughout the UK are shifting the long-considered
-            status quo for Viticulture. Throughout this website, the
+            status quo for viticulture. Throughout this website, the
             untold story of the UK's viticulture is explored. From weather
             patterns, to what lies beneath the grapes, you can discover how a
             global phenomenon is creating change locally.
@@ -199,7 +199,7 @@
         <div class="section-graphics">
           <iframe class="map" src="../04-Europe-Vineyards/04-Europe-Vineyards.html"></iframe>
           <p class="paragraph-description">
-            Map of Vineyards based on land use satellite data. Data from: Copernicus. 2000. Corine Land Cover. <em> European Environment Agency </em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download">https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download</a>
+            Map of vineyards based on land use satellite data. Data from: Copernicus. 2000. Corine Land Cover. <em> European Environment Agency </em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download">https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download</a>
           </p>
         </div>
         <div class="section-text">
@@ -246,8 +246,7 @@
     <section class="vertical-scrolling">
       <div class="fullpage-graphics">
         <iframe class="map" src="../06-UK-Vineyard-Locations/06-UK-Vineyard-Locations.html"></iframe>
-        <p class="paragraph-description">UK Vineyard Locations. Data: <a
-            href="https://www.winegb.co.uk/trade/industry-data-and-stats-2/)">https://www.winegb.co.uk/trade/industry-data-and-stats-2/</a>
+        <p class="paragraph-description">Map showing UK Vineyard Locations. Data from: Skelton, S. 2021. English Wine Dataset. <em> English Wine</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "http://www.englishwine.com/vineyards.html">http://www.englishwine.com/</a>
         </p>
       </div>
       <!-- <div class="section-text">
@@ -269,14 +268,19 @@
       <div class="section-container">
         <div class="section-graphics">
           <iframe class="map" src="../07-UK-Vineyard-Regions/07-UK-Vineyard-Regions.html"></iframe>
-          <p class="paragraph-description">Data from: <a href="https://www.winegb.co.uk/">WineGB UK (2022)</a></p>
+          <p class="paragraph-description">Map showing regional trends of viticulture, based on hectares planted, on a county level. Data from: Skelton, S. 2021. English Wine Dataset. <em> English Wine</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "http://www.englishwine.com/vineyards.html">http://www.englishwine.com/</a><br>
+          </p>
         </div>
         <div class="section-text">
           <h2>The Regions of UK Viticulture</h2>
           <h3>County Trends</h3>
           <p class="paragraph-main">
-            As shown, the South-East region of England hosts the majority of
-            Vineyards.
+            Once we aggregate the location of vineyards to their county, the spatial distribution of viticulture becomes clear. 
+            The South-East of England hosts the majority of vineyards, measured by hectares. Specifically, Kent has 101 Vineyards, spanning 1,030 hectares. 
+            This equates to about 30% of viticulture across the UK. 
+            Closely following, the counties of Sussex and Hampshire contain a combined 190 vineyards throughout 1,230 hectares. 
+            It is undeniable that the South-East of Englands is the center of viticulture within the UK. To uncover why this is, continue scrolling. 
+     
           </p>
         </div>
       </div>
@@ -291,8 +295,9 @@
           <iframe class="graphs-climate" src="../08-UK-Regions-Weather/Sun/index.html"></iframe>
           <iframe class="graphs-climate" src="../08-UK-Regions-Weather/Temp/index.html"></iframe>
 
-          <p class="paragraph-description">Data source: <a
-              href="https://www.metoffice.gov.uk/research/climate/maps-and-data/summaries/index">Met Office (2022)</a>
+          <p class="paragraph-description"> Line graphs showing comparing climate metrics between the UK and South-East England. Data from: Met Office. 2022. Climate and Climate Change: UK and regional series. <em> Met Office</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
+                ">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
+                </a>
           </p>
         </div>
         <div class="section-text">
@@ -300,8 +305,8 @@
           <p class="paragraph-main-scroll">
             Each of these graphs compare annual precipitation, sunshine
             and temperature between the South East, and the entire UK. <br><br>
-            To create a successful vineyard, grapes need a warm environment, basked in sunshine.
-            When comparing the difference between annual average measurements in the three climate
+            To create a successful vineyard, grapes need a warm, yet relatively dry, environment, basked in sunshine.
+            When comparing the differences between annual average measurements in the three climate
             factors, a clear distinction is present, and increasing. The
             South-East region has a warmer environment, with more sunshine too. These differences have exacerbated
             throughout the 185 years,
@@ -310,9 +315,9 @@
             situated within the South East of England. <br><br>
             However, precipitation levels within the South East are consistently lower then that of the United Kingdom
             . This may present as a limiting factor in
-            the success of Viticulture. Yet, in actuality,
+            the success of viticulture. Yet, in actuality,
             grapes thrive in dryer climates, such as those found within
-            the traditional regions of Viticulture, within Southern Europe.<br><br>
+            the traditional regions of viticulture in Southern Europe. This is because too much water can cause the vines to swell, and even burst.<br><br>
             Ultimately, what delaminates a successful vineyard, and also
             the taste of the grapes, lies beneath the surface.
           </p>
@@ -327,32 +332,35 @@
         <div class="section-graphics">
           <iframe class="map" src="../09-UK-Vineyard-Case-Study/09-UK-Vineyard-Case-Study.html"></iframe>
           <p class="paragraph-description">
-            Case Study Map. Data from: British Geological Survey
+            Map showing the location of Rathfinny Wine Estate, including bedrock geology. Data from:  British Geological Survey. 2013. 1:10000 Geology: Bedrock. <em> Digimap</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://digimap.edina.ac.uk/geology">https://digimap.edina.ac.uk/geology</a>
           </p>
         </div>
         <div class="section-text">
           <h2>Rathfinny Wine Estate, Sussex</h2>
           <!-- <h3>Regional Case Study: Beneath the Vine</h3> -->
           <p class="paragraph-main-scroll">
-            Vineyards grow over 30 varieties
+            Vineyards grow over 30 varieties of grape
             across the UK. Each variety requires specific levels of soil
-            moisture, PH and bedrock, which can greatly alter harvest and
-            taste of wine. The range for PH sits between
+            moisture, pH and bedrock geology, which can greatly alter harvest and
+            taste of wine.<br><br>
+            The ideal range for pH sits between
             5.5 and 6.8, creating equilibrium for nutrients. If the soil is
             too acidic or alkaline, yields will decrease and create unhealthy
-            vines. The ideal range for soil moisture lies below 50%, as soil
-            must be fertile and drain well. The bedrock beneath provides
+            vines with bitter or dull flavours. <br><br>
+            The ideal range for soil moisture lies below 50%, as soil
+            must be fertile and drain well. If the soil is too saturated, roots can beging to rot leading to unhealthy vines.<br><br>
+            Finally, the bedrock beneath provides
             minerals and physical support for vineyards. <br><br> 
             But how do these
-            requirements translate to a vineyard? The Rathfinny Wine
-            Estate was established in 2010, the vineyard specialises in producing Pinot Noir,
+            requirements translate to a single vineyard? The <a href= "https://rathfinnyestate.com/about/vineyard/">Rathfinny Wine Estate</a> was established in 2010, and specialises in producing Pinot Noir,
             Chardonnay and Pinot Meunie, spanning 350 acres. Through
-            extracting satellite data, it is evident that the surrounding land provides suitable soil moisture and PH
-            for
-            these varieties. The south-facing slopes also lie on the same
+            extracting satellite data, all soil moisture levels fell below 50%. Moreover, most of the soil PH 
+            lies within the 6.6-6.7 range. This is ideal for the grapes grown in the estate. To explore more, visit <a href= "https://agelanyi.github.io/climate-and-uk-wine/09-UK-Vineyard-Case-Study/09-UK-Soil-Moisture-PH.html">here.</a><br><br>
+            When exploring the geology of Rathfinny, its south-facing slopes lie on the same
             chalk as the Paris Basin. Chalk provides a
             soft, yet cooling and porous alkaline bedrock, ideal for grapes
-            for high acidity.
+            for high acidity.<br><br>
+            All of these measures highlight how the climatic factors within the South-East are ideal for successful viticulture. However, this isn't the same for vineyards beyond the UK.
           </p>
         </div>
       </div>
@@ -365,7 +373,7 @@
         <div class="section-graphics">
           <iframe class="map" src="../10-US-Napa-Valley/10-US-Napa-Valley.html"></iframe>
           <p class="paragraph-description">
-            Map showing Napa Valley fire on 10/10/2017. Source: The University of Texas (2017)
+            Map showing Napa Valley fire on 10th October, 2017. Data from: Bates, S. 2017. Northern California Wildfire Satellite Data Available For Access. <em> Planet</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://www.planet.com/pulse/northern-california-wildfire-satellite-data-available-for-access/">https://www.planet.com/pulse/northern-california-wildfire-satellite-data-available-for-access/</a>
           </p>
         </div>
         <div class="section-text">
@@ -373,17 +381,17 @@
           <h3>Viticulture Beyond the UK</h3>
           <p class="paragraph-main-scroll">
             Whilst climate change has produced a new opportunity for
-            Viticulture in the UK, it would be negligible to exclude how other
-            Viticulture's have been adversely impacted.<br><br> Within Napa Valley, a
+            viticulture in the UK, it would be negligible to exclude how other
+            viticulture's have been adversely impacted.<br><br> Within Napa Valley, a
             region in California, wildfires commonly occur. The specific event
             shown, upon the 10th of October 2017, displays both the smoke from
             the event, but, more importantly, the damage. With the
-            Near-Infrared Image on the right, areas that display as black have
-            been burned. Such events are increasing in frequency, alongside
-            other natural events.<br><br> This is not an isolated incident, nor is it
-            temporally restricted. Globally, climate change is altering
+            Near-Infrared Image on the right, areas that appear black have
+            burned, and plants have been scorched. his is not an isolated incident, nor is it
+            temporally restricted; within the previous decade, 50% of the land in Napa Valley have burned. Such events are increasing in frequency, alongside
+            other natural events.<br><br> Globally, climate change is altering
             patterns of production and consumption. Whilst the expanding
-            Viticulture within the UK may be considered a benefit, the
+            viticulture within the UK may be considered a benefit, the
             environmental cost of such a delicacy is high.
           </p>
         </div>
@@ -399,7 +407,7 @@
           <h3>Final remarks</h3>
           <p class="paragraph-main">
             Throughout this narrative, we have explored the UK's burgeoning
-            Viticulture. From what is being produced, to how and why it is
+            viticulture. From what is being produced, to how and why it is
             clear that the change in climate has driven this opportunity.
             However, with the point of no return, in which the potential to
             un-do climate change will become impassable, we should begin to question
