--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -336,8 +336,8 @@
           </p>
         </div>
         <div class="section-text">
-          <h2>Rathfinny Wine Estate, Sussex</h2>
-          <!-- <h3>Regional Case Study: Beneath the Vine</h3> -->
+          <h2><a href= "https://rathfinnyestate.com/about/vineyard/">Rathfinny Wine Estate</a>, Sussex</h2>
+          <h3>Regional Case Study: Beneath the Vine</h3>
           <p class="paragraph-main-scroll">
             Vineyards grow over 30 varieties of grape
             across the UK. Each variety requires specific levels of soil
