--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -222,8 +222,7 @@
         <div class="section-graphics">
           <iframe frameborder="0" class="map" src="../05-UK-Vineyard-Graphs/05-UK-Vineyard-Graphs.html"></iframe>
           <p class="paragraph-description">
-            The Profile of Wine Exports (Data:
-            https://www.statista.com/topics/8241/wine-in-the-united-kingdom/)
+            Plots showing changes in UK viticulture market. Data from:  Conway, J. 2021. Wine in the UK - Statistics & Facts. <em> Statista</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://www.statista.com/topics/8241/wine-in-the-united-kingdom/) and Skelton, S. 2021. English Wine Dataset. <em> English Wine</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "http://www.englishwine.com/vineyards.html">http://www.englishwine.com/</a>
           </p>
         </div>
         <div class="section-text">
@@ -337,7 +336,7 @@
         </div>
         <div class="section-text">
           <h2><a href= "https://rathfinnyestate.com/about/vineyard/">Rathfinny Wine Estate</a>, Sussex</h2>
-          <h3>Regional Case Study: Beneath the Vine</h3>
+          <h3>Beneath the Vine</h3>
           <p class="paragraph-main-scroll">
             Vineyards grow over 30 varieties of grape
             across the UK. Each variety requires specific levels of soil
@@ -347,8 +346,7 @@
             5.5 and 6.8, creating equilibrium for nutrients. If the soil is
             too acidic or alkaline, yields will decrease and create unhealthy
             vines with bitter or dull flavours. <br><br>
-            The ideal range for soil moisture lies below 50%, as soil
-            must be fertile and drain well. If the soil is too saturated, roots can beging to rot leading to unhealthy vines.<br><br>
+            Soil moisture should always be below 50%, allowing soil to be fertile and drain well. If the soil is too saturated, roots can beging to rot leading to unhealthy vines.<br><br>
             Finally, the bedrock beneath provides
             minerals and physical support for vineyards. <br><br> 
             But how do these
