--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -222,7 +222,7 @@
         <div class="section-graphics">
           <iframe frameborder="0" class="map" src="../05-UK-Vineyard-Graphs/05-UK-Vineyard-Graphs.html"></iframe>
           <p class="paragraph-description">
-            Plots showing changes in UK viticulture market. Data from:  Conway, J. 2021. Wine in the UK - Statistics & Facts. <em> Statista</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://www.statista.com/topics/8241/wine-in-the-united-kingdom/) and Skelton, S. 2021. English Wine Dataset. <em> English Wine</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "http://www.englishwine.com/vineyards.html">http://www.englishwine.com/</a>
+            Plots showing changes in UK viticulture market. Data from:  Conway, J. 2021. Wine in the UK - Statistics & Facts. <em> Statista</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://www.statista.com/topics/8241/wine-in-the-united-kingdom/)>Statista</a> and Skelton, S. 2021. English Wine Dataset. <em> English Wine</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "http://www.englishwine.com/vineyards.html">http://www.englishwine.com/</a>
           </p>
         </div>
         <div class="section-text">
